08-tf-eks/00-tf-demo/5-rtb.tf
resource "aws_route_table" "private1_rtb" {
  vpc_id = aws_vpc.vpctf.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat1.id
  }

  tags = {
    Name = "private1-rtb-tf"
  }
}

resource "aws_route_table" "private2_rtb" {
  vpc_id = aws_vpc.vpctf.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat2.id
  }

  tags = {
    Name = "private2-rtb-tf"
  }
}

resource "aws_route_table" "public_rtb" {
  vpc_id = aws_vpc.vpctf.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igwtf.id
  }

  tags = {
    Name = "public-rtb-tf"
  }
}

resource "aws_route_table_association" "private_1a" {
  subnet_id      = aws_subnet.private_1a.id
  route_table_id = aws_route_table.private1_rtb.id
}

resource "aws_route_table_association" "private_1b" {
  subnet_id      = aws_subnet.private_1b.id
  route_table_id = aws_route_table.private2_rtb.id
}

resource "aws_route_table_association" "public_1a" {
  subnet_id      = aws_subnet.public_1b.id
  route_table_id = aws_route_table.public_rtb.id
}

resource "aws_route_table_association" "public_1b" {
  subnet_id      = aws_subnet.public_1b.id
  route_table_id = aws_route_table.public_rtb.id
}
